semantic/src/test_cases/bad/test1.cl
(* Cyclic inheritance *)

class A inherits C {
    a : Int;
};

class B inherits A {
    b : Int;
};

class C inherits B {
    c : Int;
};

class Main {
    main() : Int {
        0
    };
};
